--- a/Lesson 4/index.html
+++ b/Lesson 4/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="icon" type="image/png" href="../img/favicon-32x32.png" sizes="32x32" />
-   <link rel="icon" type="image/png" href="../img/favicon-16x16.png" sizes="16x16" />
+   <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32" />
+   <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16" />
    
-   <link rel="stylesheet" href="../css/reset.css">
-   <link rel="stylesheet" href="../fonts/fonts.css">
-   <link rel="stylesheet" href="../css/style.css">
+   <link rel="stylesheet" href="/css/reset.css">
+   <link rel="stylesheet" href="/fonts/fonts.css">
+   <link rel="stylesheet" href="/css/style.css">
    <title>webinfo.in.ua</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
 			<header>
 
 				<a href="https://www.webinfo.in.ua/" target="_blank" class="logo">
-					<img class= "img-logo" src="../img/LOGO.png" alt="logo">
+					<img class= "img-logo" src="img/LOGO.png" alt="logo">
 					<p><b >webinfo.in.ua</b></p>
 				</a>
 
@@ -150,11 +150,11 @@ body {<br>
    </p>
      
    <div class ="footer container">
-      <div><a href="https://webfonts.pro/" target="_blank"> <img src="../img/link.png"  alt="Laptop" height="30px"></a> </div>
-      <div><a href="https://bestfonts.pro/" target="_blank"> <img src="../img/link.png" alt="Laptop" height="30px"> </a></div>
-      <div><a href="https://www.ffonts.net/" target="_blank"> <img src="../img/link.png" alt="Laptop" height="30px"> </a></div>
-      <div><a href="http://www.fonts4web.ru/" target="_blank"> <img src="../img/link.png" alt="Laptop" height="30px"> </a></div>
-      <div><a href="https://andryushkin.ru/fonts/" target="_blank"> <img src="../img/link.png" alt="Laptop" height="30px"> </a></div>
+      <div><a href="https://webfonts.pro/" target="_blank"> <img src="/img/link.png"  alt="Laptop" height="30px"></a> </div>
+      <div><a href="https://bestfonts.pro/" target="_blank"> <img src="/img/link.png" alt="Laptop" height="30px"> </a></div>
+      <div><a href="https://www.ffonts.net/" target="_blank"> <img src="/img/link.png" alt="Laptop" height="30px"> </a></div>
+      <div><a href="http://www.fonts4web.ru/" target="_blank"> <img src="/img/link.png" alt="Laptop" height="30px"> </a></div>
+      <div><a href="https://andryushkin.ru/fonts/" target="_blank"> <img src="/img/link.png" alt="Laptop" height="30px"> </a></div>
       </div>
 
 
