--- a/Lesson 4/index.html
+++ b/Lesson 4/index.html
@@ -4,12 +4,12 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32" />
-   <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16" />
+   <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+   <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
    
-   <link rel="stylesheet" href="/css/reset.css">
-   <link rel="stylesheet" href="/fonts/fonts.css">
-   <link rel="stylesheet" href="/css/style.css">
+   <link rel="stylesheet" href="css/reset.css">
+   <link rel="stylesheet" href="fonts/fonts.css">
+   <link rel="stylesheet" href="css/style.css">
    <title>webinfo.in.ua</title>
 </head>
 <body>
@@ -45,7 +45,7 @@
          </div>
       <div class="container img intro">
 
-        <div><img class="intro" src="/img/Home.png" alt="#"></div>
+        <div><img class="intro" src="img/Home.png" alt="#"></div>
         <hr>
          <p class="text" >Шрифт є одним із важливих елементів дизайну документа, який може підсилити чи навпаки зменшити ефективність донесення інформації до користувача. Важко переоцінити значення шрифту в оформленні тексту, будь то веб-сторінка чи журнальна стаття. Вірно підібраний шрифт полегшує сприйняття і додає сторінці свого неповторного стилю. Під час підготовки до створення веб-сайту, необхідно визначитися зі шрифтами, що будуть використані. Часто різними шрифтами дизайнер набирає не лише основний текст сторінки, але і різноманітні заголовки, логотипи, та інші елементи, що прикрашатимуть сторінку.</p>
       </div>
@@ -150,11 +150,11 @@ body {<br>
    </p>
      
    <div class ="footer container">
-      <div><a href="https://webfonts.pro/" target="_blank"> <img src="/img/link.png"  alt="Laptop" height="30px"></a> </div>
-      <div><a href="https://bestfonts.pro/" target="_blank"> <img src="/img/link.png" alt="Laptop" height="30px"> </a></div>
-      <div><a href="https://www.ffonts.net/" target="_blank"> <img src="/img/link.png" alt="Laptop" height="30px"> </a></div>
-      <div><a href="http://www.fonts4web.ru/" target="_blank"> <img src="/img/link.png" alt="Laptop" height="30px"> </a></div>
-      <div><a href="https://andryushkin.ru/fonts/" target="_blank"> <img src="/img/link.png" alt="Laptop" height="30px"> </a></div>
+      <div><a href="https://webfonts.pro/" target="_blank"> <img src="img/link.png"  alt="Laptop" height="30px"></a> </div>
+      <div><a href="https://bestfonts.pro/" target="_blank"> <img src="img/link.png" alt="Laptop" height="30px"> </a></div>
+      <div><a href="https://www.ffonts.net/" target="_blank"> <img src="img/link.png" alt="Laptop" height="30px"> </a></div>
+      <div><a href="http://www.fonts4web.ru/" target="_blank"> <img src="img/link.png" alt="Laptop" height="30px"> </a></div>
+      <div><a href="https://andryushkin.ru/fonts/" target="_blank"> <img src="img/link.png" alt="Laptop" height="30px"> </a></div>
       </div>
 
 
@@ -168,10 +168,10 @@ body {<br>
 </div>
 </main>
 <div class ="footer container">
-<div><a href="mailto:sergio.web.it@gmail.com" target="_blank"> <img src="../img/mail.png"  alt="Laptop" height="30px"></a> </div>
-<div><a href="https://www.instagram.com/sergio_it_developer/" target="_blank"> <img src="../img/instagram.png" alt="Laptop" height="30px"> </a></div>
-<div><a href="https://t.me/sergio_web_it" target="_blank"> <img src="../img/telegram.png" alt="Laptop" height="30px"> </a></div>
-<div><a href="https://www.linkedin.com/in/sergio-bit-145baa241" target="_blank"> <img src="../img/linkedin.png" alt="Laptop" height="30px"> </a></div>
+<div><a href="mailto:sergio.web.it@gmail.com" target="_blank"> <img src="img/mail.png"  alt="Laptop" height="30px"></a> </div>
+<div><a href="https://www.instagram.com/sergio_it_developer/" target="_blank"> <img src="img/instagram.png" alt="Laptop" height="30px"> </a></div>
+<div><a href="https://t.me/sergio_web_it" target="_blank"> <img src="img/telegram.png" alt="Laptop" height="30px"> </a></div>
+<div><a href="https://www.linkedin.com/in/sergio-bit-145baa241" target="_blank"> <img src="img/linkedin.png" alt="Laptop" height="30px"> </a></div>
 </div>
 <div class="container botton"> © 2020-2022 IT Developer  </div>
 </body>
