--- a/Lesson 4/index.html
+++ b/Lesson 4/index.html
@@ -150,7 +150,7 @@ body {<br>
 
      <figure class="item">
       <a href="https://fonts.google.com/" target="_blank">
-         <img class="container img" src="img/google-fonts.png" style="will-change: transform; transform: perspective(100px) rotateX(0deg) rotateY(0deg);">
+         <img class="container img" src="img/google-fonts.png" alt="Google" style="will-change: transform; transform: perspective(100px) rotateX(0deg) rotateY(0deg);">
       </a>
    </figure>
 
@@ -166,11 +166,11 @@ body {<br>
    </p>
      
    <div class ="footer container">
-      <div><a href="https://webfonts.pro/" target="_blank"> <img src="img/link.png"  alt="Laptop" height="30px"></a> </div>
-      <div><a href="https://bestfonts.pro/" target="_blank"> <img src="img/link.png" alt="Laptop" height="30px"> </a></div>
-      <div><a href="https://www.ffonts.net/" target="_blank"> <img src="img/link.png" alt="Laptop" height="30px"> </a></div>
-      <div><a href="http://www.fonts4web.ru/" target="_blank"> <img src="img/link.png" alt="Laptop" height="30px"> </a></div>
-      <div><a href="https://andryushkin.ru/fonts/" target="_blank"> <img src="img/link.png" alt="Laptop" height="30px"> </a></div>
+      <div><a href="https://webfonts.pro/" target="_blank"> <img src="img/link.png"  alt="Laptop" ></a> </div>
+      <div><a href="https://bestfonts.pro/" target="_blank"> <img src="img/link.png" alt="Laptop" > </a></div>
+      <div><a href="https://www.ffonts.net/" target="_blank"> <img src="img/link.png" alt="Laptop" > </a></div>
+      <div><a href="http://www.fonts4web.ru/" target="_blank"> <img src="img/link.png" alt="Laptop" > </a></div>
+      <div><a href="https://andryushkin.ru/fonts/" target="_blank"> <img src="img/link.png" alt="Laptop" > </a></div>
       </div>
 
 
@@ -184,10 +184,10 @@ body {<br>
 </div>
 </main>
 <div class ="footer container">
-<div><a href="mailto:sergio.web.it@gmail.com" target="_blank"> <img src="img/mail.png"  alt="Laptop" height="30px"></a> </div>
-<div><a href="https://www.instagram.com/sergio_it_developer/" target="_blank"> <img src="img/instagram.png" alt="Laptop" height="30px"> </a></div>
-<div><a href="https://t.me/sergio_web_it" target="_blank"> <img src="img/telegram.png" alt="Laptop" height="30px"> </a></div>
-<div><a href="https://www.linkedin.com/in/sergio-bit-145baa241" target="_blank"> <img src="img/linkedin.png" alt="Laptop" height="30px"> </a></div>
+<div><a href="mailto:sergio.web.it@gmail.com" target="_blank"> <img src="img/mail.png"  alt="Laptop" ></a> </div>
+<div><a href="https://www.instagram.com/sergio_it_developer/" target="_blank"> <img src="img/instagram.png" alt="Laptop" > </a></div>
+<div><a href="https://t.me/sergio_web_it" target="_blank"> <img src="img/telegram.png" alt="Laptop" > </a></div>
+<div><a href="https://www.linkedin.com/in/sergio-bit-145baa241" target="_blank"> <img src="img/linkedin.png" alt="Laptop" > </a></div>
 </div>
 <div class="container botton"> © 2020-2022 IT Developer  </div>
 
