--- a/Lesson 4/index.html
+++ b/Lesson 4/index.html
@@ -10,8 +10,9 @@
 
    <link rel="stylesheet" href="css/reset.css">
 
+   <link rel="stylesheet" href="css/fonts.css">
    <link rel="stylesheet" href="css/style.css">
-   <link rel="stylesheet" href="fonts/fonts.css">
+
    <title>webinfo.in.ua</title>
 </head>
 <body>
