--- a/Lesson 4/index.html
+++ b/Lesson 4/index.html
@@ -176,7 +176,7 @@ body {<br>
 
 
 <div>
-  <p class="b"> Якщо ви добре мотивовані і у процесі навчання отримуєте задоволення — <mark>не зупиняйтеся</mark>,<br> і ви неодмінно станете тим, ким хочете, і досягнете успіху!</p>
+  <p class="b"> <em> " Якщо ви добре мотивовані і у процесі навчання отримуєте задоволення — <mark>не зупиняйтеся</mark>,<br> і ви неодмінно станете тим, ким хочете, і досягнете успіху! " </em></p>
 </div>
 <p class="b">
    <strong> <a href="https://www.google.com/" target="_blank">continue =&gt; </a></strong>
