--- a/Lesson 5/index.html
+++ b/Lesson 5/index.html
@@ -59,7 +59,7 @@
 
                           <!-- Тело сайта -->
 
-	<main>
+
 		<div class="container img">
 			 <h1 class="container img">CSS-властивості. </h1>
 			</div>
@@ -286,8 +286,8 @@
           <br>*  <em> успадковується </em></li>
       </ul>
 		</div>
-	  
-    <ul>Варіанти запису значення:
+	  <p>Варіанти запису значення:
+    <ul>
       <li>padding: / margin: з_усіх_сторін;</li>
       <li>padding: / margin: зверху_знизу зправа_зліва;</li>
       <li>padding: / margin: зверху зправа_зліва знизу;</li>
@@ -298,19 +298,19 @@
       <li>padding-bottom: / margin-bottom: значення;</li>
       <li>padding-left: / margin-lef: значення;</li>
     </ul>
+   </p>
     <p>*  <em>padding не допускає негативного значення, якщо ви вказали його помилково, воно буде проігноровано. </em>
     </p>
     <p>*  <em>margin може бути заданий з негативним значенням. </em></p> 
 	  
     <h3 class="container img">Строчні і блочні об'єкти: Поведінка padding: / margin: суттєво відрізняеться!</h3>
-	  <p>
+	  <p>Відмінність Строчних від Блочних елементів у тому-що:</p>
       <ul>
-      Відмінність Строчних від Блочних елементів у тому-що:
       <li>
        Рядковий елемент йдє в один рядок і <strong>займає розмір його вмісту.</strong> </li>
       <li>Блочний елемент на веб-сторінці починається з нового рядка і йдє один під одним, має вигляд прямокутника і<strong> займає всю його ширину</strong>. Висота блочного елемента залежить від його вмісту.</li>
     </ul>
-  </p>
+  
 
 	  <div class="item">
 		
@@ -318,12 +318,12 @@
 		
 	</div>
 <p> ВАЖЛИВО ЗГАДАТИ:</p>
-	<p><em>
+	<p>
    <ul>
     <li>width: auto; - (за замовченням) автоматичний розмір</li>
     <li>width - чітко задає ширину блочного (блочно-строчного) об'єкту</li>
    </ul>   
-   </em></p> 
+   </p> 
    <ul>
     <li>*    НЕ працює з строчними об'єктами</li>
    </ul>
@@ -349,7 +349,7 @@
  </p>
 
 </div>
-</main>
+
 
 <!-- ПОДВАЛ САЙТА   -->
 
