--- a/Lesson 5/index.html
+++ b/Lesson 5/index.html
@@ -286,7 +286,8 @@
           <br>*  <em> успадковується </em></li>
       </ul>
 		</div>
-	  <p>Варіанти запису значення:
+	  <p>Варіанти запису значення:</p>
+     <p>
     <ul>
       <li>padding: / margin: з_усіх_сторін;</li>
       <li>padding: / margin: зверху_знизу зправа_зліва;</li>
@@ -319,14 +320,16 @@
 	</div>
 <p> ВАЖЛИВО ЗГАДАТИ:</p>
 	<p>
-   <ul>
-    <li>width: auto; - (за замовченням) автоматичний розмір</li>
-    <li>width - чітко задає ширину блочного (блочно-строчного) об'єкту</li>
-   </ul>   
+    <ul>
+       <li>width: auto; - (за замовченням) автоматичний розмір</li>
+       <li>width - чітко задає ширину блочного (блочно-строчного) об'єкту</li>
+    </ul>   
    </p> 
+   <p>
    <ul>
     <li>*    НЕ працює з строчними об'єктами</li>
    </ul>
+   </p>
 	<p>
 		<mark> resources for a more detailed study this subject.  </mark>
 	</p>
