--- a/Lesson 6/index.html
+++ b/Lesson 6/index.html
@@ -293,7 +293,7 @@
 		<li>padding: / margin: зверху_знизу зправа_зліва;</li>
 		<li>padding: / margin: зверху зправа_зліва знизу;</li>
 		<li>padding: / margin: зверху зправа знизу зліва;</li>
-		<li>-------------</li>
+		<li></li>
 		<li>padding-top: / margin-top: значення;</li>
 		<li>padding-right: / margin-right: значення;</li>
 		<li>padding-bottom: / margin-bottom: значення;</li>
@@ -350,7 +350,7 @@
 		<div><a href="https://html5book.ru/block-inline-elements/" target="_blank"> <img src="img/link.png" alt="Laptop" > </a></div>
 		</div>
 
-<!-- Тело сайта  THE END   -->
+<--Тело сайта THE END-->
 <!--
 <div>
   <p class="b"> <em> " Якщо ви добре мотивовані і у процесі навчання отримуєте задоволення — <mark>не зупиняйтеся</mark>,<br> і ви неодмінно станете тим, ким хочете, і досягнете успіху! "</em></p>
