--- a/Lesson 6/index.html
+++ b/Lesson 6/index.html
@@ -350,7 +350,8 @@
 		<div><a href="https://html5book.ru/block-inline-elements/" target="_blank"> <img src="img/link.png" alt="Laptop" > </a></div>
 		</div>
 
-<--tело сайта THE END-->
+<!-- tело сайта THE END -->
+	
 <!--
 <div>
   <p class="b"> <em> " Якщо ви добре мотивовані і у процесі навчання отримуєте задоволення — <mark>не зупиняйтеся</mark>,<br> і ви неодмінно станете тим, ким хочете, і досягнете успіху! "</em></p>
