--- a/Lesson 6/index.html
+++ b/Lesson 6/index.html
@@ -24,7 +24,7 @@
 		<div class="container">
 
 			<div class="header__body">
-				<a href="https://www.webinfo.in.ua/" class="header__logo logo" target="_blank" >
+				<a href="https://www.webinfo.in.ua/" class="header__logo logo link" target="_blank" >
 					<img class= "img-logo" src="img/LOGO.png" alt="LOGO">
 					<b >webinfo.in.ua</b>
 				</a>
@@ -35,19 +35,19 @@
 					<ul class="header__list">
 
 						<li>
-							<a href="https://www.webinfo.in.ua/%d0%b2%d0%b5%d1%80%d1%81%d1%82%d0%ba%d0%b0/" class="header__link" target="_blank">Верстка</a>
+							<a  href="https://www.webinfo.in.ua/%d0%b2%d0%b5%d1%80%d1%81%d1%82%d0%ba%d0%b0/" class="header__link link" target="_blank">Верстка</a>
 						</li>
 						<li>
-							<a href="https://www.webinfo.in.ua/%d1%96%d0%bd%d1%81%d1%82%d1%80%d1%83%d0%bc%d0%b5%d0%bd%d1%82%d0%b8/" class="header__link" target="_blank">Інструменти</a>
+							<a  href="https://www.webinfo.in.ua/%d1%96%d0%bd%d1%81%d1%82%d1%80%d1%83%d0%bc%d0%b5%d0%bd%d1%82%d0%b8/" class="header__link link" target="_blank">Інструменти</a>
 						</li>
 						<li>
-							<a href="https://www.webinfo.in.ua/english/" class="header__link" target="_blank">English</a>
+							<a href="https://www.webinfo.in.ua/english/" class="header__link link" target="_blank">English</a>
 						</li>
 						<li>
-							<a href="https://www.webinfo.in.ua/home/news/" class="header__link" target="_blank">News</a>
+							<a href="https://www.webinfo.in.ua/home/news/" class="header__link link" target="_blank">News</a>
 						</li>
 						<li>
-							<a href="https://www.webinfo.in.ua/" class="header__link" target="_blank">About me</a>
+							<a href="https://www.webinfo.in.ua/" class="header__link link" target="_blank">About me</a>
 						</li>
 
 					</ul>
@@ -350,8 +350,7 @@
 		<div><a href="https://html5book.ru/block-inline-elements/" target="_blank"> <img src="img/link.png" alt="Laptop" > </a></div>
 		</div>
 
-<!-- tело сайта THE END -->
-	
+<--Тело сайта THE END-->
 <!--
 <div>
   <p class="b"> <em> " Якщо ви добре мотивовані і у процесі навчання отримуєте задоволення — <mark>не зупиняйтеся</mark>,<br> і ви неодмінно станете тим, ким хочете, і досягнете успіху! "</em></p>
@@ -531,7 +530,7 @@
 
 
 <div class="button">
-    прикольна кнопка :) 
+   <a href="https://www.webinfo.in.ua/" target="_blank"> прикольна кнопка :) </a>
 </div>
 
 </div>
@@ -539,10 +538,10 @@
 <!-- ПОДВАЛ САЙТА   -->
 
 <div class ="footer container">
-<div><a href="mailto:sergio.web.it@gmail.com" target="_blank"> <img src="img/mail.png"  alt="Laptop" ></a> </div>
-<div><a href="https://www.instagram.com/sergio_it_developer/" target="_blank"> <img src="img/instagram.png" alt="Laptop" > </a></div>
-<div><a href="https://t.me/sergio_web_it" target="_blank"> <img src="img/telegram.png" alt="Laptop" > </a></div>
-<div><a href="https://www.linkedin.com/in/sergio-bit-145baa241" target="_blank"> <img src="img/linkedin.png" alt="Laptop" > </a></div>
+<div><a class="link" href="mailto:sergio.web.it@gmail.com" target="_blank"> <img src="img/mail.png"  alt="Laptop" ></a> </div>
+<div><a class="link" href="https://www.instagram.com/sergio_it_developer/" target="_blank"> <img src="img/instagram.png" alt="Laptop" > </a></div>
+<div><a class="link" href="https://t.me/sergio_web_it" target="_blank"> <img src="img/telegram.png" alt="Laptop" > </a></div>
+<div><a class="link" href="https://www.linkedin.com/in/sergio-bit-145baa241" target="_blank"> <img src="img/linkedin.png" alt="Laptop" > </a></div>
 </div>
 <div class="container botton"> © 2020-2022 IT Developer  </div>
 
