--- a/Lesson 6/index.html
+++ b/Lesson 6/index.html
@@ -535,6 +535,78 @@
 
 </div>
 
+<div class="container2">
+
+<div class="img"> <strong>- Оголошення від менторів</strong>
+</div>
+<p>
+ !!!  Правила будуть доповнені за потреби.
+Всім до прочитання та до застосування правил.
+
+Найчастіші помилки в домашніх роботах, просимо запам'ятати.   !!!
+</p>
+
+<pre class="box-code"> # 1.
+
+    @import
+
+   Повинен бути у самому верху перед усім іншим кодом, інакше не працюватиме
+</pre>
+<pre class="box-code"> # 2. 
+
+   Підключення локальних файлів
+
+   При підключенні локальних шрифтів через '@font-face' потрібно уважно дивитися на жирність шрифту (дивитися на скрині '№1'). Його накреслення 'normal', 'italic', 'oblique', а також найчастіша проблема - format("woff"), format("woff2") потрібно писати обовязково в лапках! Інакше працювати не буде.
+</pre>
+<div class="img"><img src="img/unknown.png" alt="img"></div>
+<pre class="box-code"> # 3.
+   
+   Найчастіша проблема: При додаванні картинки
+
+   Не забувайте додавати тегу '&ltimg&gt', CSS властивість 'width' або 'max-width' зі значенням '100%', це не дозволить картинці зламати вашу верстку якщо її замінити на іншу картинку з великим розміром. P.S. Приклад: 'max-width: 100%';
+</pre>
+<pre class="box-code"> # 4. 
+
+   Зовнішні відступи (margin-и)
+
+   Margin-и задаються від 'попереднього' елемента до 'наступного', від першого до другого, зверху вниз, зліва направо.
+</pre>
+<pre class="box-code"> # 5. 
+   
+   Схлопування (margin) 
+
+   Відступи 'margin-top' і 'margin-bottom' іноді об`єднуються в один, з розміром, що дорівнює найбільшому з них (або розміру одного, якщо вони рівні). Ця поведінка відома як схлопування зовнішніх відступів (margin collapsing).
+   'Щоб цього не відбувалося, дивись пункт №4.'
+</pre>
+<pre class="box-code"> # 6. 
+   
+   Правила написання: 
+ 
+   # Iмена файлів:
+      1. Імена файлів та папок лише латинські символи
+      2. Не використовувати пробіли
+      3. Ніяких спецсимволів
+      4. Нижній регістр
+   
+   # Правила написання імені класу та ID
+      1. "Ім'я довільне", але логічне - "описує цей об'єкт"
+      2. Тільки "латиниця" (eng)
+      3. Тільки "маленьки" (прописні) літери
+      4. Пробіли у імені класу (коли в імені більше одного слова) замінюємо на "-" (дефіс)
+</pre>
+<pre class="box-code"> P.S.
+
+  <strong> # Хороша практика: </strong>
+
+      Імена класам слід давати "англійською" мовою, намагайтеся одразу звикати до цього. 
+</pre>
+
+
+<div class="button">
+   <a class="imgbutton" href="https://discord.com/channels/691962563298066503/1021036561053253723/1021560263582949566" target="_blank"> Я запам'ятав ! </a>
+</div>
+
+</div>
 <!-- ПОДВАЛ САЙТА   -->
 
 <div class ="footer container">
