--- a/Lesson 7/index.html
+++ b/Lesson 7/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -115,7 +115,7 @@
 			</div>
 		</main>
 		<!-- Ви пропонуєте (невірний варіант) -->
-		<main class="page">
+<!-- 		<main class="page"> -->
 			<div class="page__container">
 				<div class="about-us">
 					<!-- А тут вже структура/контент -->
