--- a/Lesson 8/fonts/game.html
+++ b/Lesson 8/fonts/game.html
@@ -8,11 +8,11 @@
 	<link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,100;1,500;1,900&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="../css/reset.css">
 
-	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="css/style.css">
-   <link rel="stylesheet" href="css/stylegame.css">
+	<link rel="stylesheet" href="../css/fonts.css">
+	<link rel="stylesheet" href="../css/style.css">
+   <link rel="stylesheet" href="../css/stylegame.css">
 
 	<title>webinfo.in.ua</title>
 </head>
