--- a/Lesson 8/index.html
+++ b/Lesson 8/index.html
@@ -25,7 +25,7 @@
 
 			<div class="header__body">
 				<a href="https://www.webinfo.in.ua/" class="header__logo logo link" target="_blank" >
-					<img class= "img-logo" src="img/LOGO.png" alt="LOGO">
+					<img class= "img-logo" src="../img/LOGO.png" alt="LOGO">
 					<b >webinfo.in.ua</b>
 				</a>
 				<div class="header__burger">
@@ -156,10 +156,10 @@
 <!-- ПОДВАЛ САЙТА   -->
 
 <div class ="footer container">
-<div><a class="link" href="mailto:sergio.web.it@gmail.com" target="_blank"> <img src="img/mail.png"  alt="Laptop" ></a> </div>
-<div><a class="link" href="https://www.instagram.com/sergio_it_developer/" target="_blank"> <img src="img/instagram.png" alt="Laptop" > </a></div>
-<div><a class="link" href="https://t.me/sergio_web_it" target="_blank"> <img src="img/telegram.png" alt="Laptop" > </a></div>
-<div><a class="link" href="https://www.linkedin.com/in/sergio-bit-145baa241" target="_blank"> <img src="img/linkedin.png" alt="Laptop" > </a></div>
+<div><a class="link" href="mailto:sergio.web.it@gmail.com" target="_blank"> <img src="../img/mail.png"  alt="Laptop" ></a> </div>
+<div><a class="link" href="https://www.instagram.com/sergio_it_developer/" target="_blank"> <img src="../img/instagram.png" alt="Laptop" > </a></div>
+<div><a class="link" href="https://t.me/sergio_web_it" target="_blank"> <img src="../img/telegram.png" alt="Laptop" > </a></div>
+<div><a class="link" href="https://www.linkedin.com/in/sergio-bit-145baa241" target="_blank"> <img src="../img/linkedin.png" alt="Laptop" > </a></div>
 </div>
 <div class="container botton"> © 2020-2022 IT Developer  </div>
 
