--- a/game/index.html
+++ b/game/index.html
@@ -23,9 +23,9 @@
 
     <link rel="stylesheet" href="../css/reset.css" />
 
-    <link rel="stylesheet" href="../css/fonts.css" />
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/stylegame.css" />
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/stylegame.css" />
 
     <title>webinfo.in.ua</title>
   </head>
@@ -38,7 +38,7 @@
             class="header__logo logo link"
             target="_blank"
           >
-            <img class="img-logo" src="../img/LOGO.png" alt="LOGO" />
+            <img class="img-logo" src="img/LOGO.png" alt="LOGO" />
             <b>webinfo.in.ua</b>
           </a>
           <div class="header__burger">
@@ -93,66 +93,85 @@
     </header>
 
     <div class="container">
+      <h1>Гра на CSS HOVER</h1>
 
-<h1>Гра на CSS  HOVER</h1>
-
-
-<div class="game__screen">
-   <div class="start">
-       Start
-       <div class="a">
-           <div class="b">
-               <div class="c">
-                   <div class="d">
-                       <div class="e">
-                           <div class="f">
-                              <div class="g">
-                                 <div class="h">
-                                    <div class="i">
-                                       <div class="j">
-                                          <div class="k">
-                                             <div class="end">
-                                                <div class="fin"></div>
-                                             </div>
-                                          </div>
-                                       </div>
-                                    </div>
-                                 </div>
+      <div class="game__screen">
+        <div class="start">
+          Start
+          <div class="a">
+            <div class="b">
+              <div class="c">
+                <div class="d">
+                  <div class="e">
+                    <div class="f">
+                      <div class="g">
+                        <div class="h">
+                          <div class="i">
+                            <div class="j">
+                              <div class="k">
+                                <div class="end">
+                                  <div class="fin"></div>
+                                </div>
                               </div>
-                           </div>
-                       </div>
-                   </div>
-               </div>
-           </div>
-       </div>
-   </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-   <div class="finish ">Finish</div>
-</div>
-</div>
+        <div class="finish">Finish</div>
+      </div>
+    </div>
 
+    <div class="main__container-botton">
+      <p><em> " ЖИВИ! А працюй у вільній час. "</em></p>
+      <audio controls src="/music/ЖИВИ! А працюй у вільній час..mp3"></audio>
+    </div>
 
+    <!-- ПОДВАЛ САЙТА   -->
 
- <div class="main__container-botton">
-   <p> <em> " ЖИВИ! А працюй у вільній час. "</em> </p>
-   <audio controls src="/music/ЖИВИ! А працюй у вільній час..mp3"></audio>
- </div>
+    <div class="footer container">
+      <div>
+        <a class="link" href="mailto:sergio.web.it@gmail.com" target="_blank">
+          <img src="img/mail.png" alt="Laptop"
+        /></a>
+      </div>
+      <div>
+        <a
+          class="link"
+          href="https://www.instagram.com/sergio_it_developer/"
+          target="_blank"
+        >
+          <img src="img/instagram.png" alt="Laptop" />
+        </a>
+      </div>
+      <div>
+        <a class="link" href="https://t.me/sergio_web_it" target="_blank">
+          <img src="img/telegram.png" alt="Laptop" />
+        </a>
+      </div>
+      <div>
+        <a
+          class="link"
+          href="https://www.linkedin.com/in/sergio-bit-145baa241"
+          target="_blank"
+        >
+          <img src="img/linkedin.png" alt="Laptop" />
+        </a>
+      </div>
+    </div>
+    <div class="container botton">© 2020-2022 IT Developer</div>
 
-<!-- ПОДВАЛ САЙТА   -->
+    <!-- Подключение jQuery    -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 
-<div class ="footer container">
-   <div><a class="link" href="mailto:sergio.web.it@gmail.com" target="_blank"> <img src="../img/mail.png"  alt="Laptop" ></a> </div>
-   <div><a class="link" href="https://www.instagram.com/sergio_it_developer/" target="_blank"> <img src="../img/instagram.png" alt="Laptop" > </a></div>
-   <div><a class="link" href="https://t.me/sergio_web_it" target="_blank"> <img src="../img/telegram.png" alt="Laptop" > </a></div>
-   <div><a class="link" href="https://www.linkedin.com/in/sergio-bit-145baa241" target="_blank"> <img src="../img/linkedin.png" alt="Laptop" > </a></div>
-   </div>
-   <div class="container botton"> © 2020-2022 IT Developer  </div>
-   
-   <!-- Подключение jQuery    -->
-   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-   
-   <!-- Подключение файла JS скриптов    -->
-   <script src="js/script.js"></script>
-
-</body>
+    <!-- Подключение файла JS скриптов    -->
+    <script src="js/script.js"></script>
+  </body>
 </html>
