--- a/game/index.html
+++ b/game/index.html
@@ -87,7 +87,7 @@
 
     <div class="main__container-botton">
       <p><em> " ЖИВИ! А працюй у вільній час. "</em></p>
-      <audio controls src="music/ЖИВИ! А працюй у вільній час..mp3"></audio>
+      <audio controls controlsList="nodownload" src="music/ЖИВИ! А працюй у вільній час..mp3"></audio>
     </div>
 
     <!-- ПОДВАЛ САЙТА   -->
