--- a/Lesson 10/index.html
+++ b/Lesson 10/index.html
@@ -61,7 +61,7 @@
     <div class="main-container">
       <div class="article">HR statistics: job search,  interviews, hiring and recruiting</div>
       <div class="imgs">
-         <img src="/img/image.jpg" alt="img">
+         <img src="img/image.jpg" alt="img">
       </div>
       <div class="items">
          <div class="items__subartticle">
@@ -91,7 +91,7 @@
 
 <div class="main-container2">
    <div class="main-container2__img">
-      <img src="/img/image-women.jpg" alt="img">
+      <img src="img/image-women.jpg" alt="img">
    </div>
    <div class="main-container2__section section">
       <div class="section__text">Who we are</div>
@@ -121,7 +121,7 @@
 <div class="container4">
    <div class="cards">
    <div class="card">
-         <img class="card__img" src="/img/image1.jpg" alt="img">
+         <img class="card__img" src="img/image1.jpg" alt="img">
       <div class="texts">
          <div class="texts__bg">Marketing</div>
          <div class="texts__tytle">The Ultimate Google Ads Training Course</div>
@@ -129,7 +129,7 @@
       </div>
    </div>
    <div class="card">
-         <img class="card__img" src="/img/image1.jpg" alt="img">
+         <img class="card__img" src="img/image1.jpg" alt="img">
       <div class="texts">
          <div class="texts__bg">Marketing</div>
          <div class="texts__tytle">The Ultimate Google Ads Training Course</div>
@@ -137,7 +137,7 @@
       </div>
    </div>
    <div class="card">
-         <img class="card__img" src="/img/image1.jpg" alt="img">
+         <img class="card__img" src="img/image1.jpg" alt="img">
       <div class="texts">
          <div class="texts__bg">Marketing</div>
          <div class="texts__tytle">The Ultimate Google Ads Training Course</div>
@@ -145,7 +145,7 @@
       </div>
    </div>
    <div class="card">
-         <img class="card__img" src="/img/image1.jpg" alt="img">
+         <img class="card__img" src="img/image1.jpg" alt="img">
       <div class="texts">
          <div class="texts__bg">Marketing</div>
          <div class="texts__tytle">The Ultimate Google Ads Training Course</div>
@@ -153,7 +153,7 @@
       </div>
    </div>
    <div class="card">
-         <img class="card__img" src="/img/image1.jpg" alt="img">
+         <img class="card__img" src="img/image1.jpg" alt="img">
       <div class="texts">
          <div class="texts__bg">Marketing</div>
          <div class="texts__tytle">The Ultimate Google Ads Training Course</div>
@@ -161,7 +161,7 @@
       </div>
    </div>
    <div class="card">
-         <img class="card__img" src="/img/image1.jpg" alt="img">
+         <img class="card__img" src="img/image1.jpg" alt="img">
       <div class="texts">
          <div class="texts__bg">Marketing</div>
          <div class="texts__tytle">The Ultimate Google Ads Training Course</div>
@@ -187,7 +187,7 @@
       <div class="text-tytle">Only practicing tutors</div>
       <div class="text-subtytle">Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse. Morbi mauris cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit diam mi amet massa. Fermentum diam diam sociis vestibulum. Nulla nisl accumsan, id dignissim massa ut amet. Amet enim, nisi tempus vehicula.</div>
       </div>
-      <div class="img"><img src="/img/illustration.png" alt="img"></div>
+      <div class="img"><img src="img/illustration.png" alt="img"></div>
    </div>
 </div>
 
