--- a/Lesson 14/index.html
+++ b/Lesson 14/index.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;700&family=Tenor+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
     <title>NOICELAND</title>
   </head>
